--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
