--- a/.github/workflows/main_blog-student.yml
+++ b/.github/workflows/main_blog-student.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: yarn install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          yarn
+          yarn build --if-present
+          yarn start --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
