--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4200 --turbo",
     "build": "next build",
     "analyze": "ANALYZE=true next build",
-    "start": "next start",
+    "start": "next start -p 4200",
     "typecheck": "tsc --noEmit",
     "lint": "next lint && npm run lint:stylelint",
     "lint:stylelint": "stylelint '**/*.css' --cache",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@mantine/core": "7.6.1",
+    "@mantine/form": "^7.6.2",
     "@mantine/hooks": "7.6.1",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
