--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,19 @@
     "baseUrl": "./",
     "plugins": [{ "name": "next" }],
     "paths": {
-      "@app/*": ["app/*"],
-      "@components/*": ["components/*"],
-      "@contexts/*": ["contexts/*"],
-      "@shared/*": ["shared/*"],
-      "@UI/*": ["UI/*"]
+      "@app/*": ["src/app/*"],
+      "@contexts/*": ["src/contexts/*"],
+      "@shared/*": ["src/shared/*"],
+      "@UI/*": ["src/UI/*"],
+      "@services/*": ["src/services/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "postcss.config.cjs"
+  ],
   "exclude": ["node_modules"]
 }
