--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "blog",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "next dev -p 4200 --turbo",
     "build": "next build",
